# todo-api

./: Cargo.toml
src/: main.rs
src/controllers/: tasks.rs  users.rs
src/database/: database.db  mod.rs
src/middlewares/: users.rs
src/utils/: mod.rs
src/views/: mod.rs  tasks.rs  users.rs
