[package]
name = "todo-api"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tokio = { version = "1.6.0", features = ["full"] }
hyper = { version = "0.14.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
bcrypt = "0.9.0"
jsonwebtokens = "1.0.0"
rusqlite = "0.25.3"
lazy_static = "1.4.0"
chrono = "0.4.19"
uuid = { version = "0.7", features = ["serde", "v4"] }